--- a/gcj17/src/qualification/exo1/CMakeLists.txt
+++ b/gcj17/src/qualification/exo1/CMakeLists.txt
@@ -2,6 +2,6 @@
 set(SOURCE_FILES main.cpp)
 
 include_directories(${CMAKE_INCLUDE_DIR})
-add_executable(exo1 ${SOURCE_FILES})
+add_executable(q_exo1 ${SOURCE_FILES})
 
-set_target_properties(exo1 PROPERTIES FOLDER ${V_FOLDER})
+set_target_properties(q_exo1 PROPERTIES FOLDER ${V_FOLDER})
