--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
  
 add_subdirectory(${CMAKE_SOURCE_DIR}/gcj17)
+add_subdirectory(${CMAKE_SOURCE_DIR}/gcj18)
