--- a/gcj17/src/round1b/exo1/CMakeLists.txt
+++ b/gcj17/src/round1b/exo1/CMakeLists.txt
@@ -2,6 +2,6 @@
 set(SOURCE_FILES main.cpp)
 
 include_directories(${CMAKE_INCLUDE_DIR})
-add_executable(r1b_exo1 ${SOURCE_FILES})
+add_executable(2017_r1b_exo1 ${SOURCE_FILES})
 
-set_target_properties(r1b_exo1 PROPERTIES FOLDER ${V_FOLDER})
+set_target_properties(2017_r1b_exo1 PROPERTIES FOLDER ${V_FOLDER})
